@@ -22,7 +22,6 @@
 IF (NOT @YARPY_DEV_LIB_NAME@_FOUND)
 
   INCLUDE("@YARPY_DEV_DIR@/@YARPY_DEV_LIB_NAME@Dependencies.cmake")
-  SET(@YARPY_DEV_LIB_NAME@_LIB_DEPENDS ${@YARPY_DEV_LIB_NAME@_LIB_DEPENDS} ${YARP_LIBRARIES})
 
   MESSAGE(STATUS "Using @YARPY_DEV_LIB_NAME@")
 
