@@ -32,7 +32,11 @@ ENDIF (EXISTS ${YARP_MODULE_PATH}/YarpDevice.cmake)
 IF (CREATE_DEVICE_LIBRARY_MODULES)
   IF (MERGE_DEVICE_LIBRARY_MODULES)
     FIND_PACKAGE(yarpmod)
-    LINK_LIBRARIES(yarpmod)
+    IF (MSVC)
+      LINK_LIBRARIES(optimized yarpmod debug yarpmodd)
+    ELSE (MSVC)
+      LINK_LIBRARIES(yarpmod)
+    ENDIF (MSVC)
     LINK_LIBRARIES(${YARP_LIBRARIES})
   ENDIF (MERGE_DEVICE_LIBRARY_MODULES)
 ENDIF (CREATE_DEVICE_LIBRARY_MODULES)
